plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.snnsoluciones'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    // Versiones de las dependencias
    set('jwtVersion', '0.11.5')
    set('mapstructVersion', '1.5.5.Final')
    set('springdocVersion', '2.3.0')
    set('hypersistenceVersion', '3.7.0')
}

dependencies {
    // ========== Spring Boot Starters ==========
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // ========== Base de Datos ==========
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // Hypersistence para tipos JSON/JSONB en PostgreSQL
    implementation "io.hypersistence:hypersistence-utils-hibernate-63:${hypersistenceVersion}"

    // ========== Seguridad - JWT ==========
    implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"

    // ========== Mapeo y Documentación ==========
    // MapStruct para mapeo de DTOs
    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

    // OpenAPI/Swagger para documentación
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"

    // ========== Lombok ==========
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // ========== Utilidades ==========
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // ========== Desarrollo ==========
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // ========== WAR Deployment ==========
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

    // ========== Testing ==========
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// ========== Configuración del Compilador ==========
compileJava {
    options.annotationProcessorPath = configurations.annotationProcessor
    options.compilerArgs = [
            '-Amapstruct.defaultComponentModel=spring',
            '-Amapstruct.unmappedTargetPolicy=WARN'
    ]
}

// ========== Configuración de Tareas ==========
tasks.named('test') {
    useJUnitPlatform()
}

// ========== Configuración de Empaquetado ==========
war {
    enabled = true
    archiveBaseName = 'nathbit-pos'
    archiveVersion = version
}

jar {
    enabled = true
    archiveBaseName = 'nathbit-pos'
}

// ========== Configuración de Ejecución ==========
bootRun {
    jvmArgs = [
            '-Dspring.profiles.active=dev',
            '-Dfile.encoding=UTF-8'
    ]
}